# examples

collections/src/: main.rs
enums/src/: main.rs
errors/: Cargo.toml
errors/src/: main.rs
generics/src/: main.rs
guessing-game/: Cargo.toml
guessing-game/src/: main.rs
lifetime/src/: examples.rs  main.rs
minigrep/src/: lib.rs  main.rs
ownership/src/: main.rs
payments/: Cargo.toml
payments/proto/: payments.proto
payments/src/: client.rs  server.rs
restaurant/src/: lib.rs
structs/src/: main.rs
traits/src/: main.rs
variables/src/: main.rs
